# retag

./: .gitignore  AGENT.md  README.md  preview.py  pyproject.toml  requirements.txt  retag.py  retag_gui.py  retag_lib.py  retagger.spec
.github/workflows/: release.yml
scripts/: build.sh  preview.py
src/retagger/: __main__.py  core.py  gui.py
