[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retagger"
version = "1.0.1"
description = "retags MP3 files from deemix by moving featured artists from the artist tag to the title tag"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen",
    "customtkinter",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]


[project.scripts]
retagger = "retagger.__main__:main"
retagger-gui = "retagger.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
